[tool.poetry]
name = "py-reconcile"
version = "0.1.0"
description = ""
authors = ["spaceofmiah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
typed-argument-parser = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
